--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
+    "@storybook/addon-a11y": "^6.3.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "storybook-addon-material-ui": "^0.9.0-alpha.24",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -49,6 +52,7 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.3.2",
+    "@storybook/addon-console": "^1.2.3",
     "@storybook/addon-essentials": "^6.3.2",
     "@storybook/addon-links": "^6.3.2",
     "@storybook/node-logger": "^6.3.2",
