--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@storybook/addon-a11y": "^6.3.2",
+    "@storybook/addon-storysource": "^6.3.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -54,6 +55,7 @@
   "devDependencies": {
     "@storybook/addon-actions": "^6.3.2",
     "@storybook/addon-console": "^1.2.3",
+    "@storybook/addon-docs": "^6.3.4",
     "@storybook/addon-essentials": "^6.3.2",
     "@storybook/addon-links": "^6.3.2",
     "@storybook/node-logger": "^6.3.2",
