--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
+    "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@storybook/addon-a11y": "^6.3.2",
     "@storybook/addon-storysource": "^6.3.4",
     "@testing-library/jest-dom": "^5.14.1",
