--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-swipeable-views": "^0.14.0",
     "storybook-addon-material-ui": "^0.9.0-alpha.24",
     "web-vitals": "^1.1.2"
   },
